
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JAN 31a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_value_fluid(), now calls find_Qe() to determine Qe instead of 
      computing it explicitly
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - updated find_Qe(), find_Se(), find_dSe_dU_transport_Qe()
  * in model/fluid/doc/Transport_Equations/report.tex
    - added the section "Electron Energy Relaxation Terms"
  * in model/share/transport_share.c
    - removed "static" in front of double _lnLambda()
  * in model/thermo/_generic/electronimpact.c
    - added _EoverNk_from_Te() and _mueNk_from_Te()
    - added _mueN_N2()
    - fixed bugs in _EoverN_from_rhok_Te() and _Te_from_rhok_EoverN()
  * in model/thermo/_generic/test/EoverN.c
    - made modifications
  * in src/test.c
    - in main(), fixed bug by adding input.BINARYMPI = FALSE;
    

2024 JAN 26a
  * in model/chem/_NH3_Plasma_10s/doc/rodriguez2023.tex
    - made improvements
  * in model/chem/_NH3_Plasma_10s/rodriguez2023.c
    - made improvements
  * in model/thermo/_generic/electronimpact.c
    - improved the N2 and O2 EoverN vs Te data for better fit with experimental data
  * in model/thermo/doc/
    - added electronimpact.tex
  * in model/chem/
    - added _NH3_N2_2s_0r/
    

2024 JAN 19a
  * in model/chem/_NH3_Plasma_10s/rodriguez2023.c
    - changed kf1, kf2, kf3, kf4, kf17 to be function of Te instead of E/N.
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_H_Morgan() and _Te_from_EoverN_H_Morgan()


2024 JAN 17b
  * in model/chem/_NH3_Plasma_10s/rodriguez2023.c
    - deleted find_Te_from_EoverN_NH3() and find_EoverN_from_Te_NH3()
    - now calls _EoverN_from_rhok_Te() to find Estar 